syntax = "proto3";
package plugin.v1.file_type;
option go_package = "filetype";


enum Type {
  Unknown = 0;

  // The LimePipes music model data format
  MUSIC_MODEL = 1;

  // Bagpipe Music Writer Gold and Bagpipe Player format
  BWW = 2;

  // MusicXML format
  MUSIC_XML = 3;

  // ABC format
  ABC = 4;
}